fix(toast): add visible border in contrast mode

--- a/packages/components/src/toast/Toast.module.css
+++ b/packages/components/src/toast/Toast.module.css
@@ -83,6 +83,11 @@
   width: calc(100% - 1rem);
   font-size: 0.875rem;
 
+  @media (forced-colors: active) {
+    border: 1px solid;
+    border-left: 3px solid;
+  }
+
   &[data-focus-visible],
   &:focus-visible {
     outline: none;
